<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
 <RelativeLayout
     android:padding="25dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/enter_grocery"
         android:textSize="18sp"
         android:textStyle="italic"
         />
     <EditText
         android:id="@+id/grocery_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:hint="@string/hint_item"/>
     <EditText
         android:id="@+id/groceryQty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grocery_item"
         android:layout_marginTop="15dp"
         android:hint="@string/quantity_hint"
         />

     <Button
         android:id="@+id/saveBtn"
         android:layout_below="@id/groceryQty"
         android:text="@string/save_title"
         android:textStyle="bold"
         android:background="@color/colorAccent"
         android:layout_marginTop="5dp"
         android:textColor="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />




 </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>