<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/noButton"
                android:background="@color/colorAccent"
                android:text="@string/no_answer"
                android:layout_below="@id/textAlert"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/yesButton"
                android:background="@color/colorAccent"
                android:text="@string/yes_answer"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/noButton"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>